--- a/k8s/app/ggg-website/values.yaml
+++ b/k8s/app/ggg-website/values.yaml
@@ -84,8 +84,8 @@ resources:
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 livenessProbe:
   httpGet:
-    path: /
-    port: http
+    path: /health
+    port: 3008
 readinessProbe:
   httpGet:
     path: /
