--- a/k8s/app/db/templates/deployment.yaml
+++ b/k8s/app/db/templates/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "db.fullname" . }}
   labels:
     {{- include "db.labels" . | nindent 4 }}
+  annotations:
+    redeployTimestamp: "{{ now | unixEpoch }}"
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
@@ -30,6 +32,16 @@ spec:
       serviceAccountName: {{ include "db.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+
+      initContainers:
+        # First time after restart cluster always fail
+        - name: init-container-check-host-mounted-ebs-volume
+          image: busybox
+          command: [ 'sh', '-c', 'for i in $(seq 1 5); do echo "Checking attempt $i..."; if [ -f /host_ebs_volume/DONT_DELETE ]; then echo "File found, exiting successfully."; exit 0; fi; echo "File not found, retrying..."; sleep 10; done; echo "File not found after 5 attempts, exiting with error."; exit 1' ]
+          volumeMounts:
+            - name: host-volume
+              mountPath: /host_ebs_volume
+
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -37,19 +49,48 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: http
+            - name: postgres
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          args:
+            - "postgres"
+            - "-c"
+            - "max_connections=1000"
           livenessProbe:
-            {{- toYaml .Values.livenessProbe | nindent 12 }}
+            exec:
+              command:
+                - pg_isready
+                - -U
+                - root
+                - -d
+                - postgres
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            successThreshold: 1
+            failureThreshold: 3
           readinessProbe:
-            {{- toYaml .Values.readinessProbe | nindent 12 }}
+            exec:
+              command:
+                - pg_isready
+                - -U
+                - root
+                - -d
+                - postgres
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 5
+            successThreshold: 1
+            failureThreshold: 3
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- with .Values.volumeMounts }}
           volumeMounts:
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
+            - name: host-volume
+              mountPath: /var/lib/postgresql/data
+              subPath: docker_data/postgres/data
+            - name: host-volume
+              mountPath: /var/dump
+              subPath: docker_data/postgres/dump
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
