--- a/k8s/app/db/templates/service.yaml
+++ b/k8s/app/db/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: postgres
       protocol: TCP
-      name: http
+      name: postgres
   selector:
     {{- include "db.selectorLabels" . | nindent 4 }}
