chore: open node port for postgres

--- a/k8s/app/db/templates/service.yaml
+++ b/k8s/app/db/templates/service.yaml
@@ -11,6 +11,7 @@ spec:
       targetPort: postgres
       protocol: TCP
       name: postgres
+      nodePort: 32261
     - name: amqp
       port: 5672
       targetPort: amqp
