--- a/k8s/app/meta/values.yaml
+++ b/k8s/app/meta/values.yaml
@@ -4,6 +4,7 @@
 
 # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 replicaCount: <+pipeline.variables.num_of_instance>
+jobReplicaCount: <+pipeline.variables.num_of_job>
 
 namespace: <+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.namespace>
 
@@ -99,13 +100,9 @@ ingress:
         - <+pipeline.variables.meta_project_name>.dinhkhoile.com
 
 resources:
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   limits:
-    cpu: 500m
-    memory: 1000Mi
+    cpu: 1000m
+    memory: 2000Mi
   requests:
     cpu: 200m
     memory: 256Mi
