--- a/harness/cd/meta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/meta/k8s-rolling-pipeline.yaml
@@ -118,31 +118,13 @@ pipeline:
                               log "GIT_BRANCH: $GIT_BRANCH"
                               exit 1
                             fi
-
-                            # Test Git SSH connection and show full response
-                            log "Testing Git SSH connection..."
                             sleep 5000
-                            SSH_RESPONSE=$(timeout 10 ssh -T -o BatchMode=yes -o ConnectTimeout=5 git@github.com 2>&1)
-                            SSH_EXIT_CODE=$?
-                            log "SSH Connection Response: $SSH_RESPONSE"
-                            # Check the exit code
-                            case $SSH_EXIT_CODE in
-                              1)
-                                log "Connect github successfully"
-                                ;;
-                              124)
-                                log "Error: SSH connection timed out after 10 seconds"
-                                exit 1
-                                ;;
-                              255)
-                                log "Error: SSH connection failed - $SSH_RESPONSE"
-                                exit 1
-                                ;;
-                              *)
-                                log "Error: SSH connection failed with exit code $SSH_EXIT_CODE - $SSH_RESPONSE"
-                                exit 1
-                                ;;
-                            esac
+                            # Test Git SSH connection
+                            log "Testing Git SSH connection..."
+                            if ! ssh -T git@github.com 2>&1 | grep -q "successfully authenticated"; then
+                              log "Error: Failed to authenticate with GitHub"
+                              exit 1
+                            fi
                             
                             # Function to handle Git operations with error checking
                             git_operation() {
