fix: use bitnami/kubectl image

--- a/k8s/app/meta/templates/statefulset.yaml
+++ b/k8s/app/meta/templates/statefulset.yaml
@@ -28,7 +28,7 @@ spec:
 
       initContainers:
         - name: set-pod-ordinal
-          image: busybox
+          image: bitnami/kubectl:1.29
           command:
             - sh
             - -c
