--- a/k8s/app/ggg-api/values.yaml
+++ b/k8s/app/ggg-api/values.yaml
@@ -126,12 +126,20 @@ volumes:
     hostPath:
       path: /mnt/existing_ebs_volume
       type: Directory
+  - name: npm-cache
+    emptyDir: { }
+  - name: yarn-cache
+    emptyDir: { }
 
 # Additional volumeMounts on the output Deployment definition.
 volumeMounts:
   - name: host-volume
     mountPath: /app
     subPath: ggg_mkt/ggg-api
+  - name: npm-cache
+    mountPath: /home/nodejsuser/.npm
+  - name: yarn-cache
+    mountPath: /home/nodejsuser/.cache/yarn
 
 nodeSelector: { }
 
