--- a/k8s/app/ggg-api/values.yaml
+++ b/k8s/app/ggg-api/values.yaml
@@ -45,7 +45,7 @@ securityContext:
   capabilities:
     drop:
       - ALL
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
   runAsNonRoot: true
   runAsUser: 1001
 
