feat: expose rabbitmq

--- a/k8s/app/db/templates/service.yaml
+++ b/k8s/app/db/templates/service.yaml
@@ -15,8 +15,12 @@ spec:
     - name: amqp
       port: 5672
       targetPort: amqp
+      protocol: TCP
+      nodePort: 32262
     - name: management
       port: 15672
       targetPort: management
+      protocol: TCP
+      nodePort: 32263
   selector:
     {{- include "db.selectorLabels" . | nindent 4 }}
