--- a/misc/docker/splunk-server/docker-compose.local.yaml
+++ b/misc/docker/splunk-server/docker-compose.local.yaml
@@ -1,6 +1,6 @@
 services:
   splunk-server:
-    image: vjcspy/splunk-server:latest
+    image: vjcspy/splunk-server:0.1
     container_name: splunk-server
     ports:
       - "8088:8088" # Splunk management port
@@ -9,5 +9,4 @@ services:
       SPLUNK_START_ARGS: "--accept-license"
     volumes:
       - ./splunk-data/splunk:/app/splunk
-      - ./splunk-data/start.sh:/app/start.sh
     # command: tail -f /dev/null
