fix: splunk server helm live/readiness

--- a/k8s/app/splunk-server/values.yaml
+++ b/k8s/app/splunk-server/values.yaml
@@ -109,11 +109,11 @@ resources: {}
 livenessProbe:
   httpGet:
     path: /
-    port: http
+    port: web
 readinessProbe:
   httpGet:
     path: /
-    port: http
+    port: web
 
 #This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
