--- a/k8s/app/splunk-server/templates/deployment.yaml
+++ b/k8s/app/splunk-server/templates/deployment.yaml
@@ -51,6 +51,12 @@ spec:
           volumeMounts:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+        - name: splunk-license-server
+          image: vjcspy/splunk-license-server:0.2
+          ports:
+            - protocol: TCP
+              containerPort: 3001
+              name: licensePort
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
