--- a/k8s/app/splunk-server/templates/deployment.yaml
+++ b/k8s/app/splunk-server/templates/deployment.yaml
@@ -56,7 +56,7 @@ spec:
           ports:
             - protocol: TCP
               containerPort: 3001
-              name: licensePort
+              name: license
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
