feat: add new ggg website domain

--- a/k8s/app/ggg-brand/values.yaml
+++ b/k8s/app/ggg-brand/values.yaml
@@ -148,6 +148,10 @@ ingress:
       paths:
         - path: /
           pathType: Prefix
+    - host: lachcalachcach.com.vn
+      paths:
+        - path: /
+          pathType: Prefix
 
 resources:
   limits:
