feat: add notion proxy

--- a/k8s/app/ggg-brand/values.yaml
+++ b/k8s/app/ggg-brand/values.yaml
@@ -152,6 +152,10 @@ ingress:
       paths:
         - path: /
           pathType: Prefix
+    - host: learn-english.dinhkhoile.com
+      paths:
+        - path: /
+          pathType: Prefix
 
 resources:
   limits:
