--- a/k8s/app/notion-proxy/templates/secret.yaml
+++ b/k8s/app/notion-proxy/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "notion-proxy.tlsSecretFullName" . }}
+  name: nginx-ssl-secret
   labels:
     {{- include "notion-proxy.labels" . | nindent 4 }}
   annotations:
