--- a/k8s/app/notion-proxy/values.yaml
+++ b/k8s/app/notion-proxy/values.yaml
@@ -62,6 +62,9 @@ ingress:
   className: "nginx"
   annotations:
     kubernetes.io/ingress.class: nginx
+    inx.ingress.kubernetes.io/backend-protocol: "HTTPS"  # Quan trọng
+    inx.ingress.kubernetes.io/ssl-redirect: "false"      # Tắt SSL redirect
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   hosts:
     - host: english.dinhkhoile.com
       paths:
