feat: jmeta pipeline

--- a/harness/cd/jmeta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/jmeta/k8s-rolling-pipeline.yaml
@@ -25,7 +25,36 @@ pipeline:
                     source:
                       type: Inline
                       spec:
-                        script: "#!/bin/bash               "
+                        script: |
+                          #!/bin/bash
+
+                          # Lấy giá trị của biến đầu vào từ pipeline
+                          project_name="<+pipeline.variables.project_name>"
+
+                          # Kiểm tra các trường hợp project_name không hợp lệ
+                          if [ -z "${project_name}" ] || [ "${project_name}" = "null" ]; then
+                              echo "Error: project_name không hợp lệ!"
+                              echo "Giá trị hiện tại: '${project_name}'"
+                              echo "project_name không được để trống, null hoặc chưa được thay thế biến!"
+                              exit 1  # Thoát với mã lỗi 1 để fail step
+                          fi
+
+                          # Loại bỏ khoảng trắng đầu và cuối nếu có
+                          project_name=$(echo "${project_name}" | xargs)
+
+                          # Kiểm tra lại sau khi đã trim
+                          if [ -z "${project_name}" ]; then
+                              echo "Error: project_name chỉ chứa khoảng trắng!"
+                              exit 1
+                          fi
+
+                          # In ra giá trị của project_name nếu hợp lệ
+                          echo "Project Name: ${project_name}"
+
+                          # Build output variable
+                          namespace="jmeta-${project_name}"
+                          sourceCodePath="/jmeta/${project_name}"
+                          gitBranch="projects/${project_name}"
                     environmentVariables: []
                     outputVariables:
                       - name: namespace
