feat: jmeta pipeline source code

--- a/harness/cd/jmeta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/jmeta/k8s-rolling-pipeline.yaml
@@ -53,7 +53,7 @@ pipeline:
 
                           # Build output variable
                           namespace="jmeta-${project_name}"
-                          sourceCodePath="/jmeta/${project_name}"
+                          sourceCodePath="/meta/${project_name}"
                           gitBranch="projects/${project_name}"
                     environmentVariables: []
                     outputVariables:
@@ -70,6 +70,190 @@ pipeline:
                       key: configuration
                       scope: Pipeline
                   timeout: 2m
+        tags: {}
+    - stage:
+        name: SourceCode
+        identifier: SourceCode
+        description: ""
+        type: Custom
+        spec:
+          execution:
+            steps:
+              - stepGroup:
+                  name: Prepare Source Code
+                  identifier: Prepare_Source_Code
+                  steps:
+                    - step:
+                        type: Run
+                        name: Git Clone Source
+                        identifier: Git_Clone_Source
+                        spec:
+                          connectorRef: account.harnessImage
+                          image: alpine/git:2.45.2
+                          shell: Sh
+                          command: |-
+                            #!/bin/sh
+                            set -e  # Exit on error
+
+                            # Define function to log with timestamp
+                            log() {
+                              echo "[$(date '+%Y-%m-%d %H:%M:%S')] $1"
+                            }
+
+                            # Store the source code path in a variable
+                            SOURCE_CODE_PATH="<+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.sourceCodePath>"
+                            GIT_BRANCH="<+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.gitBranch>"
+
+                            # Validate input parameters
+                            if [ -z "$SOURCE_CODE_PATH" ] || [ -z "$GIT_BRANCH" ]; then
+                              log "Error: Required parameters are missing"
+                              log "SOURCE_CODE_PATH: $SOURCE_CODE_PATH"
+                              log "GIT_BRANCH: $GIT_BRANCH"
+                              exit 1
+                            fi
+
+                            # Test Git SSH connection
+                            log "Testing Git SSH connection..."
+                            if ! ssh -T -o StrictHostKeyChecking=no git@github.com 2>&1 | grep -q "successfully authenticated"; then
+                              log "Error: Failed to authenticate with GitHub"
+                              exit 1
+                            fi
+
+                            # Function to handle Git operations with error checking
+                            git_operation() {
+                              if ! "$@"; then
+                                log "Error: Git operation failed: $*"
+                                exit 1
+                              fi
+                            }
+
+                            log "Current directory: $(pwd)"
+                            log "Working with source code path: $SOURCE_CODE_PATH"
+
+                            if [ -d "$SOURCE_CODE_PATH/.git" ]; then
+                              log "Git repository already exists. Performing git pull with rebase."
+                              cd "$SOURCE_CODE_PATH"
+
+                              # Fetch all branches
+                              git_operation git fetch origin
+
+                              # Check if branch exists
+                              if ! git rev-parse --verify "origin/$GIT_BRANCH" >/dev/null 2>&1; then
+                                log "Error: Branch $GIT_BRANCH does not exist on remote"
+                                exit 1
+                              fi
+
+                              # Checkout and pull
+                              git_operation git checkout "$GIT_BRANCH"
+                              git_operation git pull --rebase --autostash origin "$GIT_BRANCH"
+                            else
+                              log "No Git repository found. Performing fresh clone."
+
+                              # Create parent directory if it doesn't exist
+                              mkdir -p "$(dirname "$SOURCE_CODE_PATH")"
+
+                              # Perform clone
+                              git_operation git clone git@github.com:vjcspy/meta.git -b "$GIT_BRANCH" "$SOURCE_CODE_PATH"
+                            fi
+
+                            log "Git operations completed successfully"
+                          resources:
+                            limits:
+                              memory: 2000Mi
+                              cpu: 500m
+                        timeout: 10m
+                  stepGroupInfra:
+                    type: KubernetesDirect
+                    spec:
+                      connectorRef: harnessk8sconnector
+                      namespace: harness-cd
+                      volumes:
+                        - mountPath: /meta
+                          type: HostPath
+                          spec:
+                            path: /mnt/existing_ebs_volume/meta
+                            type: Directory
+                        - mountPath: /root/.ssh/id_rsa
+                          type: HostPath
+                          spec:
+                            path: /home/ec2-user/.ssh/id_rsa
+                            type: File
+                        - mountPath: /root/.ssh/id_rsa.pub
+                          type: HostPath
+                          spec:
+                            path: /home/ec2-user/.ssh/id_rsa.pub
+                            type: File
+                      initTimeout: 10m
+              - stepGroup:
+                  name: Build Code
+                  identifier: Build_Code
+                  steps:
+                    - step:
+                        type: Run
+                        name: Build
+                        identifier: Build
+                        spec:
+                          connectorRef: account.harnessImage
+                          image: vjcspy/node:20-pnpm-2
+                          shell: Sh
+                          command: |-
+                            #!/bin/sh
+                            set -e  # Exit on error
+
+                            # Define function to log with timestamp
+                            log() {
+                              echo "[$(date '+%Y-%m-%d %H:%M:%S')] $1"
+                            }
+
+                            SOURCE_CODE_PATH="<+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.sourceCodePath>"
+
+                            # Validate source code path
+                            if [ -z "$SOURCE_CODE_PATH" ]; then
+                              log "Error: SOURCE_CODE_PATH is missing"
+                              exit 1
+                            fi
+
+                            # Change to source code directory
+                            log "Changing to source code directory: $SOURCE_CODE_PATH"
+                            cd "$SOURCE_CODE_PATH"
+
+                            # Verify installations
+                            log "Node version: $(node -v)"
+                            log "NPM version: $(npm -v)"
+                            log "PNPM version: $(pnpm -v)"
+
+                            # Install dependencies
+                            log "Installing dependencies with pnpm..."
+                            pwd
+                            ls -la
+                            pnpm install --frozen-lockfile
+
+                            # Build the application
+                            log "Building the application..."
+                            pnpm run build
+
+                            log "Build completed successfully"
+                          privileged: false
+                          resources:
+                            limits:
+                              memory: 3000Mi
+                              cpu: 500m
+                        description: Install dependencies and build application with pnpm
+                        timeout: 10m
+                  stepGroupInfra:
+                    type: KubernetesDirect
+                    spec:
+                      connectorRef: harnessk8sconnector
+                      namespace: harness-cd
+                      volumes:
+                        - mountPath: /meta
+                          type: HostPath
+                          spec:
+                            path: /mnt/existing_ebs_volume/meta
+                            type: Directory
+                      initTimeout: 20m
+            rollbackSteps: []
+          serviceDependencies: []
         tags: {}
   variables:
     - name: project_name
